set image for page; fixed alignment

--- a/week13/A-13/sketch.css
+++ b/week13/A-13/sketch.css
@@ -1,7 +1,7 @@
 body {
     margin: 0 auto;
-    /* text-align: center;
-    position: relative; */
+    text-align: center;
+    /* position: relative; */
 }
 
 /* body::after {
